<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.campusfeedapp.campusfeed"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color_grey_300"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/register_travel_transparent_background"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="22dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="22dp"
        android:id="@+id/llt_misc_form">

        <com.campusfeedapp.campusfeed.RobotoTextView
            android:id="@+id/top_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:background="@drawable/transparent_button_selector"
            android:gravity="right"
            android:text="LOGIN"
            android:textColor="@color/main_color_grey_700"
            android:textSize="34sp"
            app:typeface="robotoThin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <com.campusfeedapp.campusfeed.MaterialDesignIconsTextView
                style="@style/TextViewAppearance.Title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:text="@string/material_icon_account"
                android:textColor="@color/main_color_grey_300"
                android:textSize="22dp" />

            <com.campusfeedapp.campusfeed.FloatLabeledEditText
                android:id="@+id/field1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                app:fletFloatingHint="@string/username"
                app:fletHintTextColor="@color/main_color_grey_300"
                app:fletSingleLine="true"
                app:fletTextBackground="@drawable/edit_text_background_accent"
                app:fletTextColor="@color/main_color_grey_700" >
            </com.campusfeedapp.campusfeed.FloatLabeledEditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <com.campusfeedapp.campusfeed.MaterialDesignIconsTextView
                style="@style/TextViewAppearance.Title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:text="@string/material_icon_password"
                android:textColor="@color/main_color_grey_300"
                android:textSize="22dp" />

            <com.campusfeedapp.campusfeed.FloatLabeledEditText
                android:id="@+id/field2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                app:fletFloatingHint="@string/password"
                app:fletHintTextColor="@color/main_color_grey_300"
                app:fletSingleLine="true"
                app:fletTextBackground="@drawable/edit_text_background_accent"
                app:fletTextColor="@color/main_color_grey_700" >
            </com.campusfeedapp.campusfeed.FloatLabeledEditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:layout_marginTop="12dp"
            android:gravity="right" >

            <com.campusfeedapp.campusfeed.RobotoTextView
                android:id="@+id/submit_btn"
                style="@style/ButtonStyle.RaisedEmpty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:background="@drawable/transparent_button_selector"
                android:minWidth="96dp"
                android:text="LOGIN"
                android:textColor="@color/main_color_grey_700"
                app:typeface="robotoMedium"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/register_travel_transparent_background"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:paddingBottom="15dp"
        android:id="@+id/llt_misc_form_signup">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Don't have an account yet?"
                android:gravity="center_vertical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/sign_up"
                android:gravity="center_vertical"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>