<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.campusfeedapp.campusfeed"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color_grey_300"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/register_travel_transparent_background"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="22dp"
        android:paddingBottom="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/llt_signup_form">

        <com.campusfeedapp.campusfeed.CustomViews.RobotoTextView
            android:id="@+id/top_label_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:background="@drawable/transparent_button_selector"
            android:gravity="right"
            android:text="SIGN UP"
            android:textColor="@color/main_color_grey_700"
            android:textSize="34sp"
            app:typeface="robotoThin" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <com.campusfeedapp.campusfeed.CustomViews.MaterialDesignIconsTextView
                style="@style/TextViewAppearance.Title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:text="@string/material_icon_account"
                android:textColor="@color/main_color_grey_300"
                android:textSize="22dp" />

            <com.campusfeedapp.campusfeed.CustomViews.FloatLabeledEditText
                android:id="@+id/field1_signup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                app:fletFloatingHint="@string/first_name"
                app:fletHintTextColor="@color/main_color_grey_300"
                app:fletSingleLine="true"
                app:fletTextBackground="@drawable/edit_text_background_accent"
                app:fletTextColor="@color/main_color_grey_700" >
            </com.campusfeedapp.campusfeed.CustomViews.FloatLabeledEditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <com.campusfeedapp.campusfeed.CustomViews.MaterialDesignIconsTextView
                style="@style/TextViewAppearance.Title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:text="@string/material_icon_account"
                android:textColor="@color/main_color_grey_300"
                android:textSize="22dp" />

            <com.campusfeedapp.campusfeed.CustomViews.FloatLabeledEditText
                android:id="@+id/field2_signup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                app:fletFloatingHint="@string/last_name"
                app:fletHintTextColor="@color/main_color_grey_300"
                app:fletSingleLine="true"
                app:fletTextBackground="@drawable/edit_text_background_accent"
                app:fletTextColor="@color/main_color_grey_700" >
            </com.campusfeedapp.campusfeed.CustomViews.FloatLabeledEditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <com.campusfeedapp.campusfeed.CustomViews.MaterialDesignIconsTextView
                style="@style/TextViewAppearance.Title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:text="@string/material_icon_account"
                android:textColor="@color/main_color_grey_300"
                android:textSize="22dp" />

            <com.campusfeedapp.campusfeed.CustomViews.FloatLabeledEditText
                android:id="@+id/field3_signup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                app:fletFloatingHint="@string/department"
                app:fletHintTextColor="@color/main_color_grey_300"
                app:fletSingleLine="true"
                app:fletTextBackground="@drawable/edit_text_background_accent"
                app:fletTextColor="@color/main_color_grey_700" >
            </com.campusfeedapp.campusfeed.CustomViews.FloatLabeledEditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <com.campusfeedapp.campusfeed.CustomViews.MaterialDesignIconsTextView
                style="@style/TextViewAppearance.Title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:text="@string/material_icon_password"
                android:textColor="@color/main_color_grey_300"
                android:textSize="22dp" />

            <com.campusfeedapp.campusfeed.CustomViews.FloatLabeledEditText
                android:id="@+id/field4_signup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                app:fletFloatingHint="@string/phone_number"
                app:fletHintTextColor="@color/main_color_grey_300"
                app:fletSingleLine="true"
                app:fletTextBackground="@drawable/edit_text_background_accent"
                app:fletTextColor="@color/main_color_grey_700" >
            </com.campusfeedapp.campusfeed.CustomViews.FloatLabeledEditText>
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <com.campusfeedapp.campusfeed.CustomViews.MaterialDesignIconsTextView
                    style="@style/TextViewAppearance.Title1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:text="@string/material_icon_account"
                    android:textColor="@color/main_color_grey_300"
                    android:textSize="22dp" />

                <com.campusfeedapp.campusfeed.CustomViews.FloatLabeledEditText
                    android:id="@+id/field5_signup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    app:fletFloatingHint="@string/email"
                    app:fletHintTextColor="@color/main_color_grey_300"
                    app:fletSingleLine="true"
                    app:fletTextBackground="@drawable/edit_text_background_accent"
                    app:fletTextColor="@color/main_color_grey_700" >
                </com.campusfeedapp.campusfeed.CustomViews.FloatLabeledEditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <com.campusfeedapp.campusfeed.CustomViews.MaterialDesignIconsTextView
                    style="@style/TextViewAppearance.Title1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:text="@string/material_icon_account"
                    android:textColor="@color/main_color_grey_300"
                    android:textSize="22dp" />

                <com.campusfeedapp.campusfeed.CustomViews.FloatLabeledEditText
                    android:id="@+id/field6_signup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    app:fletFloatingHint="@string/college_id"
                    app:fletHintTextColor="@color/main_color_grey_300"
                    app:fletSingleLine="true"
                    app:fletTextBackground="@drawable/edit_text_background_accent"
                    app:fletTextColor="@color/main_color_grey_700" >
                </com.campusfeedapp.campusfeed.CustomViews.FloatLabeledEditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <com.campusfeedapp.campusfeed.CustomViews.MaterialDesignIconsTextView
                    style="@style/TextViewAppearance.Title1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:text="@string/material_icon_account"
                    android:textColor="@color/main_color_grey_300"
                    android:textSize="22dp" />

                <com.campusfeedapp.campusfeed.CustomViews.FloatLabeledEditText
                    android:id="@+id/field7_signup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    app:fletFloatingHint="@string/password"
                    app:fletHintTextColor="@color/main_color_grey_300"
                    app:fletSingleLine="true"
                    app:fletTextBackground="@drawable/edit_text_background_accent"
                    app:fletTextColor="@color/main_color_grey_700" >
                </com.campusfeedapp.campusfeed.CustomViews.FloatLabeledEditText>
            </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:layout_marginTop="12dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/upload_imgview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/default_img"/>

            <com.campusfeedapp.campusfeed.CustomViews.RobotoTextView
                android:id="@+id/upload_btn_signup"
                style="@style/ButtonStyle.RaisedEmpty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:background="@drawable/transparent_button_selector"
                android:minWidth="96dp"
                android:text="Upload a profile picture"
                android:textColor="@color/main_color_grey_700"
                app:typeface="robotoMedium"
                />
        </LinearLayout>
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:layout_marginTop="12dp"
            android:gravity="right">

            <com.campusfeedapp.campusfeed.CustomViews.RobotoTextView
                android:id="@+id/submit_btn_signup"
                style="@style/ButtonStyle.RaisedEmpty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:background="@drawable/transparent_button_selector"
                android:minWidth="96dp"
                android:text="SIGNUP"
                android:textColor="@color/main_color_grey_700"
                app:typeface="robotoMedium"
                />
        </LinearLayout>

    </LinearLayout>

    </ScrollView>
</LinearLayout>